Latest round of updates. Mostly minor changes.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -116,13 +116,6 @@
     year = 2011,
     note = "Unpublished"
 }
-@misc{iii,
-    author = {Insurance Information Institute},
-    title = {{Industry Overview}},
-    year = 2011,
-    howpublished = {\url{http://www.iii.org/facts_statistics/industry-overview.html}},
-    note = "Online; accessed 13-March-2013"
-}
 @misc{opencompute,
     author = {Open Compute Project},
     title = {{Hacking Conventional Computing Infrastructure}},
@@ -140,6 +133,18 @@
 @inproceedings{stalder,
     author = {Stalder, Iwan},
     title = {{Extreme Weather Insurance Risk Management Congress}},
+    booktitle = {{Weather the Storms in a World of Change}},
+    year = 2013,
+}
+@inproceedings{hope,
+    author = {Hope, Clifton S.},
+    title = {{Developing Innovative Ways of Assessing Flood To Enable Improved Measurement Of Risk: Unlocking Opportunities For Insuring US Coastal, River and Winter-Storm Related Flood}},
+    booktitle = {{Weather the Storms in a World of Change}},
+    year = 2013,
+}
+@inproceedings{li,
+    author = {Li, Ming},
+    title = {{Emerging Markets Flood Risk: better Understand Exposure Across the Overall Portfolio}},
     booktitle = {{Weather the Storms in a World of Change}},
     year = 2013,
 }
@@ -182,6 +187,12 @@
     institution={{NASA Goddard Space Flight Center}},
     year=2012
 }
+@techreport{lloyds,
+    author = {Lloyd's},
+    title = {{Tornadoes: A Rising Risk?}},
+    institution={Lloyd's},
+    year = 2013
+}
 @misc {cetas,
     title ={{Real-Time Big Data Predictive Analytics}},
     author = {Cetas},
@@ -194,5 +205,12 @@
     author = {OpenStack},
     year = 2012,
     howpublished = "\url{http://www.openstack.org}",
+    note = "Online; accessed 25-March-2013"
+}
+@misc {pentaho,
+    title ={{Big Data Analytics}},
+    author = {Pentaho},
+    year = 2013,
+    howpublished = "\url{http://www.pentaho.com/big-data/}",
     note = "Online; accessed 25-March-2013"
 }
