--- a/introduction.tex
+++ b/introduction.tex
@@ -6,11 +6,11 @@
 \newacronym{noaa}{NOAA}{National Oceanic and Atmospheric Administration}
 \newacronym{nasa}{NASA}{National Aeronautics and Space Administration}
 \section{Introduction}
-Across the globe, the big data movement is changing how industries are collecting, analyzing, and responding to the data around them. For example, efforts by the Korean Meteorological Administration are underway to upgrade the ability to predict weather patterns and the severity of weather events across the South Korean peninsula. IBM is engaged in similar work in New York City and Rio de Janeiro, in preparation for the 2014 summer Olympics, with goals of accurately predicting short term weather\cite{rwe}. What if the vast repositories of weather and climate data could be collected, stored, and analyzed by current distributed processing algorithms to produce predictions of weather conditions months, not weeks, in advance?\\
+Across the globe, the big data movement is changing how meteorologists are storing and analyzing data in response to global events. For example, efforts by the Korean Meteorological Administration are underway to upgrade the ability to predict weather patterns and the severity of weather events across the South Korean peninsula. IBM is engaged in similar work in New York City and Rio de Janeiro, in preparation for the 2014 summer Olympics, with goals of accurately predicting short term weather \cite{rwe}. Moving past short term predictions, What if the vast repositories of weather and climate data could be collected, stored, and analyzed to produce probabilities of catastrophic events months, not weeks, in advance?\\
 
-\textsc{CSC's} original ClimatEdge\texttrademark{}\index{ClimatEdge} service offered forward looking reports to commodities markets. The reports were written using  a cursory qualitative analysis of the NASA \gls{merra} data with commentary by subject matter experts in climate sciences. The monthly reports included Global Agriculture, Global Energy, Sugar and Soft Commodities, Grain and Oilseeds, and Energy/Natural Gas\cite{climatedgeurl}. Interviews conducted with  individuals associated with the original ClimatEdge\index{ClimatEdge} offering described a number of lessons learned and strategic decisions that led to a strategy shift to a quantitative product for the next version [personal communication, 2013]. Potential customers were less interested in commentary on qualitative analysis than originally thought. Along with other factors, the ClimatEdge\index{ClimatEdge} team made the decision to focus on quantitative analysis utilizing existing CSC sales channels. \\
+In 2012, \textsc{CSC's} ClimatEdge\texttrademark{}\index{ClimatEdge} service was developed to offer forward looking climate reports to commodities markets. The reports were written using a cursory qualitative analysis of the NASA \gls{merra} data with commentary by subject matter experts in climate sciences. The monthly reports included Global Agriculture, Global Energy, Sugar and Soft Commodities, Grain and Oilseeds, and Energy/Natural Gas\cite{climatedgeurl}. Interviews conducted with individuals associated with the original ClimatEdge\index{ClimatEdge} offering described a number of lessons learned and decisions that led to a strategy shift to a quantitative product for the next version [personal communication, 2013]. Potential customers were less interested in commentary on qualitative analysis than originally thought. Along with other factors, the ClimatEdge\index{ClimatEdge} team made the decision to focus on quantitative analysis utilizing existing CSC sales channels.\\
 
-In 2011, the U.S. premiums for property and casualty insurance totaled \$442 billion \cite{iii}. In 2012, the United States had eleven separate events where losses totaled more than one billion dollars each, making it the third highest year due natural catastrophes since 1980  [\textsc{CSC} communication from NOAA, 2013]. With premiums  increasingly unable to cover loses incurred from extreme weather events, the overall profitability of the insurance industry is at risk. With products such as POINT IN \cite{point_in} and Exceed \cite{exceed}, \textsc{CSC} has significant sales inroads with the general insurance industry. With established channels, the general insurance industry became a prime target for the second version of ClimatEdge\index{ClimatEdge}.\\
+During the 2012 calendar year, the United States had eleven separate events where losses totaled more than one billion dollars each, making it the third highest loss year due to natural catastrophes since 1980 [\textsc{CSC} communication from NOAA, 2013]. With premiums increasingly unable to cover loses incurred from extreme weather events, the overall profitability of the insurance industry is at risk. With products such as POINT IN \cite{point_in} and Exceed \cite{exceed}, \textsc{CSC} has significant sales inroads with the general insurance industry. With established channels, the general insurance industry became a prime target for the second version of ClimatEdge\index{ClimatEdge}.\\
 
 In order to understand offerings for general insurance, the industry business model must be explored. The following equation can be applied to the insurance  business model: 
 \begin{equation*}
@@ -18,14 +18,14 @@ In order to understand offerings for general insurance, the industry business mo
 \end{equation*}
 \textsc{CSC} recognized that without a substantial quantitative update, ClimatEdge\index{ClimatEdge} could not address the probability of events occurring, thus the overall risk could not be established. With a wealth of publicly available climate data from agencies such as the \gls{noaa} and the \gls{nasa}, \textsc{CSC} realized a business opportunity existed. A ClimatEdge\index{ClimatEdge} offering based on quantitative analysis of publicly available data targeted towards minimizing risk for the general insurance industry would be a natural fit. The next step was to develop a technical approach to retrieving, storing, and analyzing the wealth of available data. 
 \subsection{Hypothesis}
-Without investing, developing, and applying expertise in big data \index{big data} storage and analytic technologies, future ClimatEdge\index{ClimatEdge} offerings will be limited to markets served by processing relatively small and straightforward data sets. By using technologies such as virtualization, distributed databases, elastic compute and storage, and distributed algorithms, \textsc{CSC} can quantitatively analyze more data and deliver ClimatEdge\index{ClimatEdge} offerings to an ever increasing number of industries.\\
-
+Without investing in and developing a scalable solution for big data \index{big data} storage and analytics, ClimatEdge\index{ClimatEdge} offerings will be limited to markets served by either qualitative analysis or quantitative analysis against small well-structured data sets. In order to analyze the larger and more structurally complex climate data sets, a framework of scalable technologies will need to developed that can address both the small and complex offerings. With the proper framework in place, \textsc{CSC} can offer solutions derived from analytics on data having one or more of the following big data characteristics: velocity, volume, or variety to an ever increasing number of industries.\\
+ 
 Two contrasting ClimatEdge offerings will be explored that illustrate the different requirements necessary to store and analyze the required climate data. The first offering is shown to not be representative of a big data problem and is solvable by simple technology. The second offering has all the characteristics of a problem in need of a big solution. A flexible framework is then proposed that illustrates how to store and process larger and more complex data sets, such as those seen in the second offering.
 \subsection{Offerings}
-In 2012, tornados, floods, and other natural catastrophes caused \$160  billion dollars worth of damage in the United States \cite{stalder}. This is near the average of the previous ten years combined. Insured losses of \$65 billion exceeded those of the last ten years. \textsc{CSC's} Data Services group, in conjunction with industry analysts and other internal groups, has identified several opportunities  in which an updated ClimatEdge\index{ClimatEdge} offering can benefit the general insurance industry [personal communication, 2013]:
+The large number of catastrophic events in 2012, such as tornados, floods, and other natural catastrophes, caused \$160  billion dollars worth of damage in the United States \cite{stalder}. This is near the average of the previous ten years combined. Insured losses of \$65 billion exceeded those of the last ten years. Tornados, while a worldwide phenomenon, occur with greater frequency in the United States due to the meeting of cold Canadian air with low-level moisture from Gulf of Mexico. Losses from these severe storms alone have accounted for more than half of all insured catastrophe loses since 1990 \cite{lloyds}. Several presentations at the Extreme Weather Congress in January 2013 focused on flooding. In the United States, floods are the most common natural disaster and average about \$6 billion in damages each year \cite{hope}. Globally, floods rank only behind earthquakes as the worlds costliest natural disasters \cite{li}. \textsc{CSC's} Data Services group, in conjunction with industry analysts and other internal groups, has identified several opportunities in which an updated ClimatEdge\index{ClimatEdge} offering can benefit the general insurance industry [personal communication, 2013]:
 \begin{itemize}
     \item tornado prediction
     \item hail prediction \& forensics
     \item global and domestic flood prediction
 \end{itemize}
-This paper examines the tornado and flood predictive analytics as having contrasting requirements and views them through the attributes associated with big data. The data requirements and analytics necessary for producing a hail offering are similar enough to tornado and flood that examining it would not yield significant additional insight.
+This paper examines the tornado and flood predictive analytics as having contrasting requirements at either end of the attribute scale associated with big data. The analytics necessary for producing a hail offering are an offshoot of the tornado algorithm and the data sets required are also similar in size and complexity to the tornado sets. A detailed examination of the hail offering would therefore, not yield significant additional insight as compared to tornado and flood.
