--- a/solution.tex
+++ b/solution.tex
@@ -7,14 +7,14 @@
 \newacronym{raid}{RAID}{Redundant Array of Independent Disk}
 \newacronym{s3}{S3}{Simple Storage Service}
 \section{Reference Big Data Framework}
-A framework for data processing has responsibility for achieving several overall goals. These goals, independent from their technical implementation, are a core part of transforming information from raw data to actionable results, such as ClimatEdge\index{ClimatEdge} proposes to proivde. Applying a big data\index{big data} label means the framework operates at the scale necessary to accommodate the velocity, volume, and variety of expected data. In order to quantitatively process the ever increasing amounts of structured and unstructured data sets necessary in a ClimatEdge\index{ClimatEdge} offering, a technical framework capable of providing the following functionality is needed:
+A framework for data processing has responsibility for achieving several overall goals. These goals, independent from their technical implementation, are a core part of transforming information from raw data to actionable results, such as ClimatEdge\index{ClimatEdge} proposes to provide by giving insurance underwriters probabilities associated with catastrophic events. Applying a big data\index{big data} label means the framework operates at the scale necessary to accommodate the velocity, volume, and variety of expected data. In order to quantitatively process the ever increasing amounts of structured and unstructured data sets necessary in a ClimatEdge\index{ClimatEdge} offering, a technical framework capable of providing the following functionality is needed:
 \begin{itemize}
 	\item retrieving data updates
 	\item storing and indexing for optimal retrieval
 	\item data discovery and analytics
 	\item presenting real-time and offline results
 \end{itemize}
-Each functional layer can be represented graphically, building on the layer to its left and on top of an infrastructure implementation. The difference between a framework and a platform is one of flexibility and customization.  In order to support a wide variety of future data types and analytic requirements, a framework of tools is preferable to an extensible product platform. Using a framework, it is possible to build loosely coupled layers that can be swapped out as technology evolves and requirements change. While capable of delivering a flexible and extensible solution, the cost of this approach is in the systems integration and development expertise necessary in wiring the layers together in a seamless fashion. Having a framework capable of of providing this functionality is crucial in allowing ClimatEdge\index{ClimatEdge} to deliver its offerings to both current and future clients. Figure \ref{layers} shows the layers of the proposed framework.
+Each functional layer can be represented graphically, building on the layer to its left and on top of an infrastructure implementation. The difference between a framework and a platform is one of flexibility and customization.  In order to support a wide variety of future data types and analytic requirements, a framework of tools is preferable to an extensible product platform. Using a framework, it is possible to build loosely coupled layers that can be swapped out as technology evolves and requirements change. While capable of delivering a flexible and extensible solution, the cost of this approach is in the systems integration and development expertise necessary in wiring the layers together in a seamless fashion. Having a framework capable of providing this functionality is crucial in allowing ClimatEdge\index{ClimatEdge} to deliver its offerings to both current and future clients. Figure \ref{layers} shows the layers of the proposed framework.
 \begin{figure}[!htbp]
     \centering
     \includegraphics[scale=.80]{framework_layers}
@@ -68,7 +68,7 @@ In terms of logical representation inside of a data store, table \ref{model} lis
 \end{table}
 This simple structure, in conjunction with materialized views,\index{materialized views} enables fast analytic retrieval of data based on any combination of the following: temporal, geospatial, or by meta-data \cite{materialized_views}. Materialized views provide an alternative to traditional indexing technology that work well, but at the cost of storage efficiency. 
 \subsection{Discovery and Analytics}
-The technology behind big data\index{big data} storage is generally only interesting to engineers. Customers pay for the results and insights gleaned from analysis of the stored data. The discovery and analytic processes make further usage of the elastic compute infrastructure identified earlier. Analytics can generally be organized into the two modes in which they are run: real-time and offline. Whenever analytics are run, it is crucial to design the algorithms to to take advantage of additional capacity as needed and then to release it to realize cost savings. Through extensive testing and modeling, it should be straightforward to estimate the necessary capacity for all the offline analytics and spin up resources at well established intervals. Real-time is somewhat more complex as it is difficult to understand capacity requirements a priori. \gls{ec2} Reserved Instances from \gls{aws} are an excellent way to partially address this problem. Analytical implementations vary according to specific requirements, but R, Java, and Python are extremely popular and would be ideal for ClimatEdge\index{ClimatEdge}. Both classes of analytics are presented in further detail below.
+The technology behind big data\index{big data} storage is generally only interesting to engineers. Customers pay for the results and insights gleaned from analysis of the stored data. The discovery and analytic processes make further usage of the elastic compute infrastructure identified earlier. Analytics can generally be organized into the two modes in which they are run: real-time and offline. Whenever analytics are run, it is crucial to design the algorithms to to take advantage of additional capacity as needed and then to release it to realize cost savings. Through extensive testing and modeling, it should be straightforward to estimate the necessary capacity for all the offline analytics and spin up resources at well established intervals. Real-time is somewhat more complex as it is difficult to understand capacity requirements a priori. Analytical implementations vary according to specific requirements, but R, Java, and Python are extremely popular analytic implementation languages and would be ideal for ClimatEdge\index{ClimatEdge} offerings. Commercial discovery and analytics solutions that work with multiple storage technologies, such as Instaview, are much more flexible than products that ship with their own storage layer \cite{pentaho}. This flexibility allow solutions which combine the optimal storage layer to the analytic layer without having to reinvent the wheel. Both classes of analytics are presented in further detail below.
 \subsubsection{Offline Analytics}
 Offline analytics, also known as batch, are run at predefined intervals without human interaction. Well defined questions are implemented ahead of time, optimized in the storage layer, tested and refined, and then set to run through a scheduling mechanism like Jenkins or Cron. The tornado and flood analytics are excellent examples of a batch jobs needing to be run at well defined intervals to take account of updated data. MapReduce, popularized by Google, is an extremely common implementation of distributed processing over large data sets. It is implementation agnostic and several popular frameworks exist to speed up development. The output from the MapReduce jobs can be written to the data store and used as input to the presentation layer.
 \subsubsection{Real-time Analytics}
@@ -76,8 +76,8 @@ Real-time analytics are run on demand, though implementations should make use of
 
 One approach to real-time analytics involves crowd sourcing. Conceptually simple, the trick lies in implementing it correctly. Essentially, any time a real-time analytic is run, the data is turned into a repeatable offline analytic behind the scenes. This particular analytic can then be presented to the user as one that has been precomputed, thus saving time. For example, if the average rainfall was desired for a particular latitude and longitude, an offline analytic could be created that precomputes this value once per month. Over time, the goal is to change as many real-time questions as possible into precomputed answers.
 \subsection{Presentation}
-The presentation layer not only handles delivery of both types of analytic results, but also handles any user interaction with the data store, such as interactive discovery or real-time queries. Data visualization, usually graphical in nature,  is a specific instance of information presentation and can be assumed to be handled within this layer. Discussions were conducted with the sales team at Quantum4D around their main data discovery and visualization product \cite{quantum}. While there are great many products around that fill this role, the Quantum4D platform is storage layer agnostic which stands out amongst its competitors and makes an excellent flexible addition to the presentation layer.\\
+The presentation layer not only handles delivery of both types of analytic results, but also handles any user interaction with the data store, such as interactive discovery or real-time queries. While each and every business offering has specific requirements in terms of what is delivered and how it is presented, several tools can ease the burden of developing custom solutions for each offering. Data visualization, usually graphical in nature, is a specific instance of information presentation and can be assumed to be handled within this layer. Discussions were conducted with the sales team at Quantum4D around their main data discovery and visualization product \cite{quantum}. While there are many products that provide similar capabilities, the Quantum4D platform is storage layer agnostic which stands out amongst its competitors and makes an excellent addition to the presentation layer.\\
 
- While each and every business offering has specific implementation requirements, framework support of the the following formats will cover many of the use cases: \gls{html}, mobile, and structured text. Fortunately, wide adoption of \gls{html}5 standards, across both desktop and mobile browsers, brings the promise of "write once, run anywhere" closer to fruition. However, applications that require advanced security and graphically intensive user experiences will benefit from native implementation in either Objective-C (Apple) or Java (Android). Structured text is often represented by serialized \gls{xml}, as is the case with ClimatEdge\index{ClimatEdge} offerings. Customer specific implementations are often required in any offering, which lead to presentation solutions built upon various \gls{json}\index{JSON} libraries such as Node.js, Socket.io, Processing.js and Backbone.js.
+At the highest level, any modern framework should support of the the following formats, as they will cover many of the use cases: \gls{html}, mobile, and structured text. Fortunately, wide adoption of \gls{html}5 standards, across both desktop and mobile browsers, brings the promise of "write once, run anywhere" closer to fruition. However, applications that require advanced security and graphically intensive user experiences will benefit from native implementation in either Objective-C (Apple) or Java (Android). Structured text is often represented by serialized \gls{xml}, as is the case with ClimatEdge\index{ClimatEdge} offerings. Customer specific implementations are often required in any offering, which lead to presentation solutions built upon various \gls{json}\index{JSON} libraries such as Node.js, Socket.io, Processing.js and Backbone.js.
 \subsection{Summary}
-The components presented here are one implementable approach to a flexible big data\index{big data} framework for ingesting, storing, analyzing, and presenting both structured unstructured data. There is no commercial solution capable of covering every possible scenario, since requirements evolve and technologies improve. Todays solution may not work tomorrow and tomorrows solution may not exist yet. Therefore, a flexible framework capable of adapting to a variety of technologies is a superior approach. Flexibility and loose coupling of technology to each layer are ways to ensure that the solution framework and expertise \textsc{CSC} is investing in today, will fit the customers and requirements of tomorrow.
+The components presented here are one implementable approach to a flexible big data\index{big data} framework for ingesting, storing, analyzing, and presenting both structured unstructured data. There is no commercial solution capable of covering every possible scenario, since requirements evolve and technologies improve. Todays solution may not work tomorrow and tomorrows solution may not exist yet. Therefore, a flexible and loosely coupled framework capable of containing a variety of technologies is a superior approach that will allow \textsc{CSC} to choose the most efficient tool for each offering. By utilizing a set of interconnected and agnostic technologies in each layer, the solution framework and expertise \textsc{CSC} is investing in today, will fit the customers and requirements of tomorrow.
